# stm32-rust-example

./: Cargo.toml  README.md  cks32f1x.cfg  openocd.cfg  openocd.gdb
.cargo/: config
mcu/stm32f103/: openocd.cfg  openocd_cks32f1.cfg
mcu/stm32f303/: memory.x  openocd.cfg
src/: main.rs
