[package]
name = "stm32f103_example"
version = "0.1.0"
authors = ["loggi <loggi.ain@gmail.com>"]
edition = "2018"

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-itm = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103", "rt"]

# Позволяет использовать `cargo fix`!
#[[bin]]
#name = "app"
#test = false
#bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация